--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -32,6 +32,43 @@
     }
   }
 
+.columns.price {
+  background: var(--white);
+  padding: 10px;
+  border-radius: 10px;
+  color: var(--text-color);
+  font-weight: var(--font-weight-medium);
+  text-align: center;
+  margin-bottom: 40px;
+  container: price / inline-size;
+
+  > div {
+    gap: 0;
+    padding-top: 24px;
+  }
+
+  strong {
+    color: var(--laz-logo-blue);
+    font-size: var(--body-font-size-l);
+  }
+
+  .button.primary, .button.secondary {
+    padding: 8px 20px 6px;
+  }
+}
+
+@media (width < 767px) {
+    .columns.logos {
+      > div {
+        flex-flow: row wrap;
+
+        > div {
+          flex: 0 45%;
+        }
+      }
+    }
+  }
+
 .columns.stacked > div > div:nth-child(1) {
     order: 1;
   }
@@ -86,6 +123,14 @@
   margin-bottom: 20px;
 }
 
+.columns.navy div.col-has-content {
+    background: var(--product-navy-blue);
+    border-radius: 20px;
+    padding: 15px;
+    margin-bottom: 20px;
+  color: var(--white)
+}
+
 .columns.white {
   > div > div.col-has-content {
     background: var(--white);
@@ -103,6 +148,13 @@
   }
 }
 
+@container price (max-width: 800px) {
+   div:first-child {
+     > div {
+       flex-flow: column;
+     }
+  }
+}
 
 @media (width >=768px) {
   .columns {
@@ -151,6 +203,10 @@
       }
     }
   }
+
+  .columns.price {
+    font-size: var(--body-font-size-m);
+  }
 }
 
 @media (width>=992px) {
@@ -173,10 +229,6 @@
         flex: 1 1 100%;
       }
     }
-  }
-
-  .columns.price {
-    width: 64%;
   }
 
   .columns.wrap > div > div {
