--- a/templates/blog-author/blog-author.css
+++ b/templates/blog-author/blog-author.css
@@ -12,9 +12,10 @@
         align-items: center;
         flex-flow: row wrap;
         gap: 36px;
+        padding-bottom: 0;
 
         .columns-img-col {
-            width: 36%;
+            flex: 1 0 20%;
 
             img {
                 border-radius: 50%;
@@ -22,7 +23,7 @@
         }
 
         div:nth-child(2) {
-            width: 56%;
+            flex: 2;
         }
 
         div:nth-child(3) {
@@ -33,7 +34,7 @@
 
     @media (width >= 768px) {
         .columns:first-of-type  > div .columns-img-col {
-            width: 33%;
+            flex: 1;
         }
     }
 
@@ -41,8 +42,13 @@
         .columns:first-of-type  > div {
             align-items: flex-start;
 
-            .columns-img-col img {
-                width: 173px;
+            .columns-img-col {
+                flex: 1;
+
+                img {
+                max-height: 173px;
+                width: auto;
+                }
             }
 
             div:nth-child(2) {
