--- a/templates/blog-article/blog-article.css
+++ b/templates/blog-article/blog-article.css
@@ -29,12 +29,22 @@
         }
     }
 
+.blog-article.col-1 main .section-outer .section .default-content-wrapper {
+    text-align: left;
+}
+
 @media (width >= 768px) {
     .blog-article main {
         .section-outer .section {
             max-width: 800px;
             margin-left: auto;
             margin-right: auto;
+        }
+    }
+
+    .blog-article.col-1 main {
+        .section-outer .section {
+            max-width: 1170px;
         }
     }
 }
@@ -71,6 +81,10 @@
                 grid-area: content;
             }
         }
+    }
+
+    .blog-article.col-1 main {
+            display: block;
     }
 }
 
