--- a/templates/blog-article/blog-article.css
+++ b/templates/blog-article/blog-article.css
@@ -26,6 +26,11 @@
                 font-size: var(--body-font-size-m);
                 color: var(--text-color);
             }
+
+            .section.short > div{
+                padding: 15px;
+                margin: 30px 0;
+            }
         }
     }
 
