--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,6 +68,13 @@
 
   /* BRANDS */
 
+  /* Raz-plus berry */
+  --product-berry: #c83192;
+  --light-pink: #F1CBE4;
+  --gradient-rad-berry: radial-gradient(ellipse at center bottom, var(--product-berry), var(--product-berry), var(--product-purple));
+  --gradient-lin-berry: linear-gradient(var(--product-berry), var(--product-purple), var(--product-berry));
+
+
   /* Raz-kids product dark-blue */
   --product-dark-blue: #005cb9;
   --rk-blue: #D9E7F5; /* section bg */
@@ -78,28 +85,22 @@
   --gradient-rad-dark-blue: radial-gradient(ellipse at center bottom, var(--rk-blue-dark), var(--product-dark-blue), var(--product-dark-blue));
   --gradient-lin-dark-blue: linear-gradient(var(--rk-blue-dark), var(--product-dark-blue), var(--product-dark-blue));
 
-  /* Raz-plus berry */
-  --product-berry: #c83192;
-  --light-pink: #F1CBE4;
-  --gradient-rad-berry: radial-gradient(ellipse at center bottom, var(--product-berry), var(--product-berry), var(--product-purple));
-  --gradient-lin-berry: linear-gradient(var(--product-berry), var(--product-purple), var(--product-berry));
-
-  /* Reading a-z red, Resources */
-  --product-red: #E21D46;
-  --vaz-red-pastel: #FFCECB; /* section bg */
-  --gradient-rad-red: radial-gradient(ellipse at center, var(--white) 0%, var(--light-red) 0%, #e21f48 60%, var(--product-red) 100%);
-  --gradient-lin-red: linear-gradient(var(--light-red), var(--product-red), var(--dark-blue));
+  /* Science a-z green */
+  --product-green: #128641; /* repeated */
+  --b-green: #419e66;
+  --gradient-rad-green: radial-gradient(ellipse at center bottom, var(--b-green), var(--b-green), var(--product-green));
+  --gradient-lin-green: linear-gradient(var(--b-green), var(--product-green), var(--b-green));
 
   /* Foundations a-z navy */
   --product-navy-blue: #0E4482;
   --gradient-rad-navy: radial-gradient(ellipse at center bottom, var(--product-berry), var(--product-purple), var(--product-navy-blue));
   --gradient-lin-navy: linear-gradient(var(--product-navy-blue), var(--product-purple), var(--product-berry));
 
-/* Science a-z green */
-  --product-green: #128641; /* repeated */
-  --b-green: #419e66;
-  --gradient-rad-green: radial-gradient(ellipse at center bottom, var(--b-green), var(--b-green), var(--product-green));
-  --gradient-lin-green: linear-gradient(var(--b-green), var(--product-green), var(--b-green));
+  /* writing a-z orange */
+  --product-orange: #f05b32;
+  --gradient-rad-orange: radial-gradient(ellipse at center bottom, var(--orange), var(--orange), var(--product-orange));
+  --gradient-lin-orange: linear-gradient(var(--orange), var(--orange), var(--product-orange));
+  --orange: #F48C21;
 
   /* vocabulary a-z purple */
   --product-purple: #904799;
@@ -107,11 +108,11 @@
   --gradient-rad-purple: radial-gradient(ellipse at center bottom, var(--faz-purple), var(--product-purple), var(--faz-purple));
   --gradient-lin-purple: linear-gradient(var(--faz-purple), var(--product-purple), var(--faz-purple));
 
-  /* writing a-z orange */
-  --product-orange: #f05b32;
-  --gradient-rad-orange: radial-gradient(ellipse at center bottom, var(--orange), var(--orange), var(--product-orange));
-  --gradient-lin-orange: linear-gradient(var(--orange), var(--orange), var(--product-orange));
-  --orange: #F48C21;
+  /* Reading a-z red, Resources */
+  --product-red: #E21D46;
+  --vaz-red-pastel: #FFCECB; /* section bg */
+  --gradient-rad-red: radial-gradient(ellipse at center, var(--white) 0%, var(--light-red) 0%, #e21f48 60%, var(--product-red) 100%);
+  --gradient-lin-red: linear-gradient(var(--light-red), var(--product-red), var(--dark-blue));
 
 /* yellow for what we do */
   --rpe-gold: #D5A13D; /* use for What We Do pages still only 2.3 contrast */
@@ -166,9 +167,11 @@
   --theme-btn-secondary-border-hov: var(--product-red);
   --theme-btn-secondary-bg-hov: var(--product-red);
   --theme-btn-secondary-txt-hov: var(--white);
+  --theme-table-head-bg: var(--laz-logo-blue);
   --theme-table-head-txt: var(--white);
   --theme-heading-color: var(--laz-logo-blue);
   --theme-link-color: var(--laz-logo-blue);
+  --theme-breadcrumbs-bg: var(--laz-logo-blue);
 
 } /* end root */
 
@@ -444,11 +447,6 @@ main {
     color: var(--theme-link-color);
   }
 
-  .table table th {
-    background-color: var(--theme-table-head-bg);
-    color: var(--theme-table-head-txt);
-  }
-
   .accordion.round .accordion-item-label {
     border: 2px solid var(--theme-accordion-border);
   }
@@ -583,15 +581,6 @@ THEMES
   --theme-checkmark-circle: url('/icons/checkmark-circle-dark-blue.svg');
 }
 
-[data-theme="dark-blue"], [data-theme="blue"],
-[data-theme="gradient-rad-dark-blue"], [data-theme="gradient-lin-dark-blue"]{
-  --theme-bg: var(--product-dark-blue);
-  --theme-btn-primary-txt: var(--product-dark-blue);
-  --theme-btn-secondary-txt-hov: var(--product-dark-blue);
-  --theme-gradient-radial: var(--gradient-rad-dark-blue);
-  --theme-gradient-linear: var(--gradient-lin-dark-blue);
-}
-
 .berry main {
   --theme-breadcrumbs-bg: var(--product-berry);
   --theme-heading-color: var(--product-berry);
@@ -620,24 +609,40 @@ THEMES
   --theme-gradient-radial: var(--gradient-rad-berry);
 }
 
-.red main {
-  --theme-breadcrumbs-bg: var(--product-red);
-  --theme-heading-color: var(--product-red);
-  --theme-link-color: var(--product-red);
-  --theme-table-head-bg: var(--product-red);
-  --theme-accordion-border: var(--product-red);
-  --theme-accordion-txt: var(--product-red);
-  --theme-cards-circle-bg: var(--product-red);
-  --theme-btn-secondary-txt-hov: var(--product-red);
-  --theme-checkmark-circle: url('/icons/checkmark-circle-red.svg');
+[data-theme="dark-blue"], [data-theme="blue"],
+[data-theme="gradient-rad-dark-blue"], [data-theme="gradient-lin-dark-blue"]{
+  --theme-bg: var(--product-dark-blue);
+  --theme-btn-primary-txt: var(--product-dark-blue);
+  --theme-btn-secondary-txt-hov: var(--product-dark-blue);
+  --theme-gradient-radial: var(--gradient-rad-dark-blue);
+  --theme-gradient-linear: var(--gradient-lin-dark-blue);
 }
 
-[data-theme="red"], [data-theme="gradient-rad-red"], [data-theme="gradient-lin-red"] {
-  --theme-bg: var(--product-red);
-  --theme-btn-primary-txt: var(--product-red);
-  --theme-btn-secondary-txt-hov: var(--product-red);
-  --theme-gradient-linear: var(--gradient-lin-red);
-  --theme-gradient-radial: var(--gradient-rad-red);
+.green main {
+  --theme-breadcrumbs-bg: var(--product-green);
+  --theme-heading-color: var(--product-green);
+  --theme-link-color: var(--product-green);
+  --theme-btn-primary-border: var(--product-green);
+  --theme-btn-primary-bg: var(--product-green);
+  --theme-btn-primary-border-hov: var(--product-green);
+  --theme-btn-primary-txt-hov: var(--product-green);
+  --theme-btn-secondary-border: var(--product-green);
+  --theme-btn-secondary-txt: var(--product-green);
+  --theme-btn-secondary-border-hov: var(--product-green);
+  --theme-btn-secondary-bg-hov: var(--product-green);
+  --theme-table-head-bg: var(--product-green);
+  --theme-accordion-border: var(--product-green);
+  --theme-accordion-txt: var(--product-green);
+  --theme-cards-circle-bg: var(--product-green);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-green.svg');
+}
+
+[data-theme="green"],[data-theme="gradient-rad-green"], [data-theme="gradient-lin-green"]  {
+  --theme-bg: var(--product-green);
+  --theme-btn-primary-txt: var(--product-green);
+  --theme-btn-secondary-txt-hov: var(--product-green);
+  --theme-gradient-linear: var(--gradient-lin-green);
+  --theme-gradient-radial: var(--gradient-rad-green);
 }
 
 .navy main {
@@ -667,28 +672,31 @@ THEMES
   --theme-gradient-radial: var(--gradient-rad-navy);
 }
 
-.green main {
-  --theme-breadcrumbs-bg: var(--product-green);
-  --theme-heading-color: var(--product-green);
-  --theme-link-color: var(--product-green);
-  --theme-btn-primary-border: var(--product-green);
-  --theme-btn-primary-bg: var(--product-green);
-  --theme-btn-primary-border-hov: var(--product-green);
-  --theme-btn-primary-txt-hov: var(--product-green);
-  --theme-btn-secondary-border: var(--product-green);
-  --theme-btn-secondary-txt: var(--product-green);
-  --theme-btn-secondary-border-hov: var(--product-green);
-  --theme-btn-secondary-bg-hov: var(--product-green);
-  --theme-table-head-bg: var(--product-green);
-  --theme-accordion-border: var(--product-green);
-  --theme-accordion-txt: var(--product-green);
-  --theme-cards-circle-bg: var(--product-green);
+.orange main {
+  --theme-breadcrumbs-bg: var(--product-orange);
+  --theme-heading-color: var(--laz-logo-blue);
+  --theme-link-color: var(--product-orange);
+  --theme-btn-primary-border: var(--product-orange);
+  --theme-btn-primary-bg: var(--product-orange);
+  --theme-btn-primary-border-hov: var(--product-orange);
+  --theme-btn-primary-txt-hov: var(--product-orange);
+  --theme-btn-secondary-border: var(--product-orange);
+  --theme-btn-secondary-txt: var(--product-orange);
+  --theme-btn-secondary-border-hov: var(--product-orange);
+  --theme-btn-secondary-bg-hov: var(--product-orange);
+  --theme-table-head-bg: var(--product-orange);
+  --theme-accordion-border: var(--product-orange);
+  --theme-accordion-txt: var(--product-orange);
+  --theme-cards-circle-bg: var(--product-orange);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-orange.svg');
 }
 
-[data-theme="green"],[data-theme="gradient-rad-green"], [data-theme="gradient-lin-green"]  {
-  --theme-bg: var(--product-green);
-  --theme-btn-primary-txt: var(--product-green);
-  --theme-btn-secondary-txt-hov: var(--product-green);
+[data-theme="orange"],[data-theme="gradient-rad-orange"], [data-theme="gradient-lin-orange"]  {
+  --theme-bg: var(--product-orange);
+  --theme-btn-primary-txt: var(--product-orange);
+  --theme-btn-secondary-txt-hov: var(--product-orange);
+  --theme-gradient-linear: var(--gradient-lin-orange);
+  --theme-gradient-radial: var(--gradient-rad-orange);
 }
 
 .purple main {
@@ -707,6 +715,7 @@ THEMES
   --theme-accordion-border: var(--product-purple);
   --theme-accordion-txt: var(--product-purple);
   --theme-cards-circle-bg: var(--product-purple);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-purple.svg');
 
   .news-filter-container, .reviews-filter-container {
     h3, a, p>strong, strong>p {
@@ -724,30 +733,24 @@ THEMES
   --theme-gradient-radial: var(--gradient-rad-green);
 }
 
-.orange main {
-  --theme-breadcrumbs-bg: var(--product-orange);
-  --theme-heading-color: var(--laz-logo-blue);
-  --theme-link-color: var(--product-orange);
-  --theme-btn-primary-border: var(--product-orange);
-  --theme-btn-primary-bg: var(--product-orange);
-  --theme-btn-primary-border-hov: var(--product-orange);
-  --theme-btn-primary-txt-hov: var(--product-orange);
-  --theme-btn-secondary-border: var(--product-orange);
-  --theme-btn-secondary-txt: var(--product-orange);
-  --theme-btn-secondary-border-hov: var(--product-orange);
-  --theme-btn-secondary-bg-hov: var(--product-orange);
-  --theme-table-head-bg: var(--product-orange);
-  --theme-accordion-border: var(--product-orange);
-  --theme-accordion-txt: var(--product-orange);
-  --theme-cards-circle-bg: var(--product-orange);
+.red main {
+  --theme-breadcrumbs-bg: var(--product-red);
+  --theme-heading-color: var(--product-red);
+  --theme-link-color: var(--product-red);
+  --theme-table-head-bg: var(--product-red);
+  --theme-accordion-border: var(--product-red);
+  --theme-accordion-txt: var(--product-red);
+  --theme-cards-circle-bg: var(--product-red);
+  --theme-btn-secondary-txt-hov: var(--product-red);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-red.svg');
 }
 
-[data-theme="orange"],[data-theme="gradient-rad-orange"], [data-theme="gradient-lin-orange"]  {
-  --theme-bg: var(--product-orange);
-  --theme-btn-primary-txt: var(--product-orange);
-  --theme-btn-secondary-txt-hov: var(--product-orange);
-  --theme-gradient-linear: var(--gradient-lin-orange);
-    --theme-gradient-radial: var(--gradient-rad-orange);
+[data-theme="red"], [data-theme="gradient-rad-red"], [data-theme="gradient-lin-red"] {
+  --theme-bg: var(--product-red);
+  --theme-btn-primary-txt: var(--product-red);
+  --theme-btn-secondary-txt-hov: var(--product-red);
+  --theme-gradient-linear: var(--gradient-lin-red);
+  --theme-gradient-radial: var(--gradient-rad-red);
 }
 
 .gold main {
@@ -764,9 +767,11 @@ THEMES
   --theme-btn-secondary-border-hov: var(--rpe-gold);
   --theme-btn-secondary-bg-hov: var(--rpe-gold);
   --theme-table-head-bg: var(--rpe-gold);
+  --theme-table-head-txt: var(--laz-logo-blue);
   --theme-accordion-border: var(--rpe-gold);
   --theme-accordion-txt: var(--rpe-gold);
   --theme-cards-circle-bg: var(--rpe-gold);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-logo-blue.svg');
 }
 
 [data-theme="gold"] {
@@ -793,30 +798,13 @@ THEMES
   --theme-accordion-border: var(--laz-blue);
   --theme-accordion-txt: var(--laz-blue);
   --theme-cards-circle-bg: var(--laz-blue);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-blog-blue.svg');
 }
 
 [data-theme="laz-blue"] {
   --theme-bg: var(--laz-blue);
   --theme-btn-primary-txt: var(--laz-blue);
   --theme-btn-secondary-txt-hov: var(--laz-blue);
-}
-
-[data-theme="light-blue"] {
-  --theme-bg: var(--rk-blue);
-  --theme-txt: var(--text-color);
-  --theme-heading-color: var(--laz-logo-blue);
-  --theme-link-color: var(--laz-logo-blue);
-  --theme-btn-primary-bg: var(--laz-logo-blue);
-  --theme-btn-primary-border: var(--laz-logo-blue);
-  --theme-btn-primary-txt: var(--gray);
-  --theme-btn-primary-border-hov: var(--laz-logo-blue);
-  --theme-btn-primary-txt-hov: var(--laz-logo-blue);
-  --theme-btn-secondary-border: var(--laz-logo-blue);
-  --theme-btn-secondary-bg: var(--rk-blue);
-  --theme-btn-secondary-txt: var(--laz-logo-blue);
-  --theme-btn-secondary-border-hov: var(--laz-logo-blue);
-  --theme-btn-secondary-bg-hov: var(--laz-logo-blue);
-  --theme-table-head-bg: var(--laz-logo-blue);
 }
 
 [data-theme="gray"], [data-theme="white"] {
@@ -834,7 +822,7 @@ THEMES
   --theme-btn-secondary-txt: var(--laz-logo-blue);
   --theme-btn-secondary-border-hov: var(--laz-logo-blue);
   --theme-btn-secondary-bg-hov: var(--laz-logo-blue);
-  --theme-table-head-bg: var(--laz-logo-blue);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-logo-blue.svg');
 
   h1,h2 {
     color: var(--laz-logo-blue);
@@ -843,18 +831,6 @@ THEMES
 
 [data-theme="white"]  {
   --theme-bg: var(--white);
-}
-
-[data-theme="red-pastel"] {
-  --theme-bg: var(--vaz-red-pastel);
-  --theme-text: var(--text-color);
-  --theme-heading-color: var(--laz-logo-blue);
-
-  color: var(--text-color);
-
-  h1,h2 {
-    color: var(--laz-logo-blue);
-  }
 }
 
 [data-theme="pink"] {
@@ -871,7 +847,7 @@ THEMES
   --theme-btn-secondary-txt: var(--product-berry);
   --theme-btn-secondary-border-hov: var(--product-berry);
   --theme-btn-secondary-bg-hov: var(--product-berry);
-  --theme-table-head-bg: var(--product-berry);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-berry.svg');
 
   color: var(--text-color);
 
@@ -880,6 +856,36 @@ THEMES
       background-color: var(--light-pink);
     }
   }
+}
+
+[data-theme="red-pastel"] {
+  --theme-bg: var(--vaz-red-pastel);
+  --theme-text: var(--text-color);
+  --theme-heading-color: var(--laz-logo-blue);
+
+  color: var(--text-color);
+
+  h1,h2 {
+    color: var(--laz-logo-blue);
+  }
+}
+
+[data-theme="light-blue"] {
+  --theme-bg: var(--rk-blue);
+  --theme-txt: var(--text-color);
+  --theme-heading-color: var(--laz-logo-blue);
+  --theme-link-color: var(--laz-logo-blue);
+  --theme-btn-primary-bg: var(--laz-logo-blue);
+  --theme-btn-primary-border: var(--laz-logo-blue);
+  --theme-btn-primary-txt: var(--gray);
+  --theme-btn-primary-border-hov: var(--laz-logo-blue);
+  --theme-btn-primary-txt-hov: var(--laz-logo-blue);
+  --theme-btn-secondary-border: var(--laz-logo-blue);
+  --theme-btn-secondary-bg: var(--rk-blue);
+  --theme-btn-secondary-txt: var(--laz-logo-blue);
+  --theme-btn-secondary-border-hov: var(--laz-logo-blue);
+  --theme-btn-secondary-bg-hov: var(--laz-logo-blue);
+  --theme-checkmark-circle: url('/icons/checkmark-circle-logo-blue.svg');
 }
 
 /* Gradient section themes */
@@ -971,7 +977,10 @@ THEMES
 /* custom backgound colors for when in a P tag by itself */
 .bg-dark-blue, .bg-navy, .bg-red, .bg-berry, .bg-orange, .bg-purple,
 .bg-green, .bg-laz-blue, .bg-gray, .bg-black, .bg-gold {
-  padding: 10px 10px 5px !important;
+  .columns {
+    padding: 10px 10px 5px !important;
+  }
+
   color: var(--white);
 }
 
@@ -1344,7 +1353,8 @@ button.secondary {
     width: 100%;
   }
 
-  /* sections */
+  /************
+ /* SECTIONS */
 
 
   main > .section-outer {
@@ -1411,7 +1421,7 @@ button.secondary {
     main > .section-outer > .section,
     main > .section-outer > .bg-image-container > .section,
     .breadcrumbs-container, .hero-content {
-      max-width: 990px;
+      max-width: 1002px;
     }
   }
 
