--- a/templates/wide/wide.css
+++ b/templates/wide/wide.css
@@ -3,54 +3,58 @@
     .section.product {
         display: grid;
         align-content: center;
-    }
-
-    h1 {
-        font-size: var(--heading-font-size-m);
-        margin: 1em 0 .5em;
-        line-height: 1.1;
-    }
-}
-
-.hero {
-    > div {
-        background: var(--cta-thin);
-        padding: 40px;
-        border-radius: 10px;
-        margin-bottom:10px;
-    }
-
-    h1 {
-        margin-top: 0;
-        color: var(--laz-logo-blue);
-    }
-
-    p, li {
-        font-weight: var(--font-weight-medium);
-        color: var(--text-color);
-    }
-
-    ul {
-        padding-inline-start: 0;
+        text-align: center;
 
         li {
-            list-style: none;
-            display: flex;
-            line-height: 1.5;
+            text-align: left;
+        }
 
-            &::before {
-                content: var(--theme-checkmark-circle);
-                margin-right: 12px;
-                min-width: 17px;
-                width: 17px;
+        h1 {
+            font-size: var(--heading-font-size-m);
+            margin: 1em 0 .5em;
+            line-height: 1.1;
+        }
+
+        .hero {
+            > div {
+                background: var(--cta-thin);
+                padding: 40px;
+                border-radius: 10px;
+                margin-bottom: 10px;
+            }
+
+            h1 {
+                margin-top: 0;
+                color: var(--laz-logo-blue);
+            }
+
+            p, li {
+                font-weight: var(--font-weight-medium);
+                color: var(--text-color);
+            }
+
+            ul {
+                padding-inline-start: 0;
+
+                li {
+                    list-style: none;
+                    display: flex;
+                    line-height: 1.5;
+
+                    &::before {
+                        content: var(--theme-checkmark-circle);
+                        margin-right: 12px;
+                        min-width: 17px;
+                        width: 17px;
+                    }
+                }
+            }
+
+            a:any-link:not(.button) {
+                color: var(--text-color);
             }
         }
     }
-
-    a:any-link:not(.button) {
-        color: var(--text-color);
-    }
-}
 
 .carousel.white {
     .carousel-slide {
@@ -80,6 +84,7 @@
     max-width: 750px;
     padding-bottom: 200px;
 }
+    }
 
 @media (width >= 768px) {
     .wide h1 {
@@ -106,6 +111,7 @@
             "logo logo"
             "hero image"
             "price image";
+            text-align: left;
 
             .columns-wrapper:first-child {
                 grid-area: logo;
