--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,6 @@
   --rpe-dark-purple: #5E2967;
   --rpe-magenta: #942A6A;
   --rpe-salmon: #C24A48;
-  --dark-purple: #613aaf; /* H3 color */
   --dark-olive-green: #3E3F30;
   --charcoal-blue: #263238;
   --maroon: #77001a;
@@ -120,6 +119,7 @@
   /* laz-blue for blog */
   --laz-blue: #00B3E2; /* mostly blog */
   --blog-blue: #18a4ce; /* blog buttons contrast 2.9 */
+  --dark-purple: #613aaf; /* blog H3 color */
 
   /* don't override user accessibility settings */
   forced-color-adjust: none;
@@ -885,6 +885,10 @@ THEMES
   --theme-bg: var(--white);
 }
 
+[data-theme="bright-yellow"]  {
+  --theme-bg: var(--bright-yellow);
+}
+
 [data-theme="pink"] {
   --theme-bg: var(--light-pink);
   --theme-heading-color: var(--product-berry);
@@ -1094,8 +1098,16 @@ THEMES
   background-color: var(--product-purple);
 }
 
-:is(h1, h2, h3, h4).purple {
+:is(h1, h2, h3, h4).dark-purple {
   color: var(--product-purple);
+}
+
+.bg-purple {
+  background-color: var(--dark-purple);
+}
+
+:is(h1, h2, h3, h4).dark-purple {
+  color: var(--dark-purple);
 }
 
 .bg-green {
