--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,6 +172,7 @@
   --theme-heading-color: var(--laz-logo-blue);
   --theme-link-color: var(--laz-logo-blue);
   --theme-breadcrumbs-bg: var(--laz-logo-blue);
+  --theme-cards-circle-bg: var(--laz-logo-blue);
 
 } /* end root */
 
