--- a/templates/wide/wide.css
+++ b/templates/wide/wide.css
@@ -38,7 +38,7 @@
 
                 li {
                     list-style: none;
-                    display: flex;
+                    display: block;
                     line-height: 1.5;
 
                     &::before {
@@ -54,6 +54,41 @@
                 color: var(--text-color);
             }
         }
+    }
+
+    .section.sticky {
+        max-width: 1527px;
+
+            .button.primary, .button.secondary {
+                padding: 8px 20px 6px;
+            }
+
+        h2 {
+            font-size: var(--body-font-size-s);
+        }
+
+        .columns.hide {
+            > div {
+                flex-direction: row;
+
+                > div:nth-child(2), > div:nth-child(4) {
+                    display: flex;
+                    justify-content: center;
+                }
+
+                > div:first-child, > div:nth-child(3) {
+                    display: none;
+                }
+
+            }
+        }
+    }
+
+    .section-outer:has(.section.sticky) {
+        position: fixed;
+        bottom: 0;
+        z-index: 1;
+
     }
 
 .carousel.white {
@@ -101,6 +136,10 @@
        h1 {
            font-size: var(--heading-font-size-xl);
        }
+    }
+
+   .wide .section-outer .section.sticky h2 {
+        font-size: var(--heading-font-size-s);
     }
 
 }
@@ -163,13 +202,19 @@
     }
 }
 
-@media (width >= 1296px) {
+@media (width >= 1200px) {
     .carousel.white .carousel-navigation-buttons button.slide-prev {
         left: 0;
     }
 
     .carousel.white .carousel-navigation-buttons button.slide-next {
         right: 0;
+    }
+
+    .wide .section.sticky .columns.hide {
+        > div > div:first-child, > div > div:nth-child(3) {
+            display: block;
+        }
     }
 }
 
