--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -77,6 +77,28 @@
   max-height: 150px;
 }
 
+.columns.tile {
+  > div > div {
+    border-radius: 20px;
+  }
+  
+  .icon {
+    width: 72px;
+    height: 72px;
+  }
+
+  p{
+    width: 100%;
+    padding: 20px;
+    left: 0;
+    bottom: 0;
+    line-height: 1.2;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: capitalize;
+  }
+}
+
 @media (width < 767px) {
     .columns.logos {
       > div {
