--- a/templates/two-column/two-column.css
+++ b/templates/two-column/two-column.css
@@ -1,6 +1,10 @@
 .two-column main {
     .section-outer {
         margin: unset;
+        
+        .section {
+            width: 100%;
+        }
 
         h2 {
             font-size: var(--body-font-size-m);
