--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -89,7 +89,6 @@
 
   p{
     width: 100%;
-    padding: 20px;
     left: 0;
     bottom: 0;
     line-height: 1.2;
@@ -98,7 +97,11 @@
   }
 
   a {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
     text-transform: uppercase;
+    text-decoration: none;
   }
 }
 
