--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1121,12 +1121,14 @@ THEMES
 
 /* custom backgound colors for when in a P tag by itself */
 .bg-dark-blue, .bg-navy, .bg-red, .bg-berry, .bg-orange, .bg-purple,
-.bg-green, .bg-laz-blue, .bg-gray, .bg-black, .bg-gold {
+.bg-green, .bg-laz-blue, .bg-gray, .bg-black, .bg-gold, .bg-blue {
   .columns {
     padding: 10px 10px 5px !important;
   }
 
-  color: var(--white);
+  a,h1,h2,h3,h4,h5,h6,p {
+    color: var(--white) !important;
+  }
 }
 
 .bg-gray {
@@ -1176,6 +1178,10 @@ THEMES
 }
 
 .bg-orange {
+  background-color: var(--orange);
+}
+
+.bg-orange-red {
   background-color: var(--product-orange);
 }
 
