--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1218,7 +1218,7 @@ THEMES
   background-color: var(--product-orange);
 }
 
-:is(h1, h2, h3, h4).orange-red {
+:is(h1, h2, h3, h4).orange-red, :is(h1, h2, h3, h4).red-orange {
   color: var(--product-orange);
 }
 
